--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
  </head>
  <body>
- <font face="나눔고딕">
+ <font face="NanumGothic">
  <div id="a">
 
  <hr style="border:dotted 3px gray;">
